# sparks

./: .gitignore  README.md  README_en.md  README_jp.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  benchmark_engine.cpp  benchmark_engine.h  particle_system.cpp  particle_system.h  sparks_jni.cpp  vulkan_engine.cpp  vulkan_engine.h  vulkan_utils.cpp  vulkan_utils.h
ios/Sparks/: AppDelegate.swift  BenchmarkEngine.swift  Info.plist  MetalRenderer.swift  MetalViewController.swift  ParticleSystem.swift  SceneDelegate.swift
ios/Sparks.xcodeproj/: project.pbxproj
ios/Sparks/Shaders/: FluidCommon.h  ParticleTypes.h  ShaderTypes.h  Sparks-Bridging-Header.h  clouds.metal  cosmic.metal  cyberspace.metal  (+35 more)
shared/shaders/: ParticleTypes.h  clouds.frag.glsl  compile_spirv.sh  cosmic.frag.glsl  cyberspace.frag.glsl  flighthud.frag.glsl  fluid_a.frag.glsl  fluid_b.frag.glsl  fluid_c.frag.glsl  fluid_d.frag.glsl  fluid_image.frag.glsl  fractal.frag.glsl  fullscreen.vert.glsl  furball.frag.glsl  fxaa.frag.glsl  grid.frag.glsl  heart.frag.glsl  hudrings.frag.glsl  hypertunnel.frag.glsl  interstellar.frag.glsl  jellyfish.frag.glsl  mandelbulb.frag.glsl  mandelbulb2.frag.glsl  metalball.frag.glsl  octgrams.frag.glsl  palette.frag.glsl  particle_render.frag.glsl  particle_render.metal  particle_render.vert.glsl  particle_sim.comp.glsl  particle_sim.metal  plasma.frag.glsl  primitives.frag.glsl  protean.frag.glsl  rainforest.frag.glsl  rocaille.frag.glsl  seascape.frag.glsl  shutohwy.frag.glsl  sparks.frag.glsl  sparks.metal  (+3 more)
(+6 files in other folders)
